<package format="3">
<name>talker</name>
<version>0.0.0</version>
<description>ROS2 talker from ros tutorials</description>
<maintainer email="yakirhuri21@gmail.com">yakir</maintainer>
<license>TODO: License declaration</license>
<build_depend>rclcpp</build_depend>
<build_depend>std_msgs</build_depend>
<exec_depend>rclcpp</exec_depend>
<exec_depend>std_msgs</exec_depend>
<buildtool_depend>ament_cmake</buildtool_depend>
<test_depend>ament_lint_auto</test_depend>
<test_depend>ament_lint_common</test_depend>
<export>
<build_type>ament_cmake</build_type>
</export>
</package>