<?xml version="1.0"?>
<package format="2">
  <name>lynx_driver</name>
  <version>0.9.0</version>
  <description>Serial (UART) driver for lynx LLC</description>
  <maintainer email="igor@cogniteam.com">Igor Makhtes</maintainer>
  <license>Proprietary</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>ackermann_msgs</depend>
  <depend>angles</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>lynx_msgs</depend>
</package>
