<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_slam_navigation_cogniteam</name>
  <version>0.0.0</version>
  <description>
  The package is a comprehensive solution designed to streamline the launching of Navigation 2 (Nav2) and Simultaneous Localization and Mapping (SLAM) packages within a robotic system. 
  This package combines the power of Nav2 and SLAM to provide accurate localization, mapping, and autonomous navigation capabilities to your robot.
  </description>

  <maintainer email="saar@cogniteam.com">saarmoseri</maintainer>
  <license>TODO: License declaration</license>


  <build_depend>std_msgs</build_depend>
  <build_depend>rclpy</build_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
